--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: "Test Build"
+name: "Check Build"
 on:
   pull_request:
   push:
 jobs:
-  marsh-framework:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -11,13 +11,4 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@v8
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: DeterminateSystems/flake-checker-action@main
-      - run: nix build .#nixosConfigurations.marsh-framework.config.system.build.toplevel
-  marsh-wsl:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        # v8 only works? https://github.com/DeterminateSystems/nix-installer-action/issues/60
-      - uses: DeterminateSystems/nix-installer-action@v8
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      - uses: DeterminateSystems/flake-checker-action@main
-      - run: nix build .#nixosConfigurations.marsh-wsl.config.system.build.toplevel
+      - run: nix flake check
